[package]
name = "rhizome"
version = "0.1.0"
edition = "2021"
authors = ["devensiv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
tokio-rustls = "0.23"
tokio = { version = "~1.10", features = ["rt", "net", "macros", "io-util", "sync"]}
rustls-pemfile = "1"
rcgen = { version="0.9", optional = true }

[features]
certgen = ["dep:rcgen"]
