[package]
name = "rhizome"
version = "0.2.0"
edition = "2021"
authors = ["devensiv <devensiv@gmail.com>", "max <mx.coppen@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
tokio-rustls = "0.23"
tokio = { version = "1", features = ["rt", "net", "macros", "io-util", "sync", "time"]}
rustls-pemfile = "1"
rcgen = { version="0.9", optional = true }

[features]
certgen = ["dep:rcgen"]
